[gd_scene load_steps=6 format=3 uid="uid://fqy1sq8ab6au"]

[ext_resource type="Script" path="res://scenes/shader_bg.gd" id="1_h16mg"]
[ext_resource type="Shader" path="res://scenes/shader_bg.gdshader" id="2_1va2p"]
[ext_resource type="Script" path="res://scripts/lava_ball.gd" id="3_f1db1"]
[ext_resource type="Texture2D" uid="uid://3u82bwanievc" path="res://scenes/lava_colors/low_contrast.tres" id="3_wugob"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h2y00"]
shader = ExtResource("2_1va2p")
shader_parameter/array_size = 1
shader_parameter/input_points = Array[Vector3]([Vector3(-1.02265, 1.42801, 1e-05)])
shader_parameter/canvas_size = Vector2(1152, 648)
shader_parameter/color_ramp = ExtResource("3_wugob")

[node name="ShaderBg" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_h16mg")
metadata/_edit_lock_ = true

[node name="ShaderRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_h2y00")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="ControlPoints" type="Node" parent="."]

[node name="MouseBall" type="Node2D" parent="."]
position = Vector2(396, 938)
scale = Vector2(1e-05, 1)
script = ExtResource("3_f1db1")

[node name="Manual" type="Node" parent="."]

[node name="top" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 22.3333
text = "0.889"

[node name="bottom" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -22.3333
offset_right = 40.0
grow_vertical = 0
text = "3.788"

[node name="Total" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 29.0
offset_right = 40.0
offset_bottom = 51.3333
text = "total: 42.408"

[node name="Avg" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 60.0
offset_right = 40.0
offset_bottom = 82.3333
text = "avg: 2.827"
